# OptimalRepair

./: CMakeLists.txt  RADEME.md  README-zh-cn.txt  codingRecord.txt  tmp-file-future work.txt
include/: bandwidth.h  ec_config.h  file_opt.h  network_transfer.h  repair.h  share_func.h
script/: create_env_storagenodes.sh  delete_env_storagenodes.sh  install_tools.sh  kill_all_storagenodes.sh  kill_ip_storagenodes.sh  kill_storagenodes.sh  limit_network.sh  make.sh  scp_storagenodes.sh  start_all_storagenodes.sh  start_client.sh  start_close_iperf3_server.sh  start_iperf3_test.sh  start_storagenodes.sh  unlimit_network.sh  valgrind.sh
src/client/: client_main.c
src/pswitch/: pswitch_main.c
src/share_func/: bandwidth.c  file_opt.c  network_transfer.c  repair.c  share_func.c
src/storagenodes/: storagenodes_main.c
test_file/bandwidth/: heavy_band.txt  light_band.txt
test_file/write/: 2MB_src  cut_file  cut_file _KB.c  cut_file.c  cut_file_test.c  pareto.py  read_bandwidth.c
